Fixed issue with horizontal scroll. Added @media

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,7 +1,3 @@
-@media screen and (max-width: 640px) {
-	
-}
-
 body {
     background: #ebebeb;
     color: white;
